NetBSD Problem Report #45219

From www@NetBSD.org  Sat Aug  6 10:45:38 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 45F4063CC42
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  6 Aug 2011 10:45:38 +0000 (UTC)
Message-Id: <20110806104537.6855363CC3D@www.NetBSD.org>
Date: Sat,  6 Aug 2011 10:45:37 +0000 (UTC)
From: eliedebrauwer@gmail.com
Reply-To: eliedebrauwer@gmail.com
To: gnats-bugs@NetBSD.org
Subject: mkubootimage usage information does not show lzma and lzo compression options
X-Send-Pr-Version: www-1.0

>Number:         45219
>Category:       bin
>Synopsis:       mkubootimage usage information does not show lzma and lzo compression options
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Aug 06 10:50:00 +0000 2011
>Closed-Date:    Sat Aug 06 11:11:15 +0000 2011
>Last-Modified:  Sat Aug 06 11:15:02 +0000 2011
>Originator:     Elie De Brauwer
>Release:        -current
>Organization:
>Environment:
>Description:
src/usr.bin/mkubootimage/mkubootimage.c has recently (rev 1.10) had support for lzma and lzo compression options in the header:

edb@lapedb:~/netbsd/src/usr.bin/mkubootimage$ cvs diff -r 1.9 -r 1.10 mkubootimage.c
Warning: Permanently added 'anoncvs.netbsd.org' (RSA) to the list of known hosts.
Index: mkubootimage.c
===================================================================
RCS file: /cvsroot/src/usr.bin/mkubootimage/mkubootimage.c,v
retrieving revision 1.9
retrieving revision 1.10
diff -r1.9 -r1.10
1c1
< /* $NetBSD: mkubootimage.c,v 1.9 2011/08/03 17:00:13 matt Exp $ */
---
> /* $NetBSD: mkubootimage.c,v 1.10 2011/08/03 17:46:40 matt Exp $ */
33c33
< __RCSID("$NetBSD: mkubootimage.c,v 1.9 2011/08/03 17:00:13 matt Exp $");
---
> __RCSID("$NetBSD: mkubootimage.c,v 1.10 2011/08/03 17:46:40 matt Exp $");
180a181,182
> 	{ IH_COMP_LZMA,		"lzma" },
> 	{ IH_COMP_LZO,		"lzo" },


However the usage information mkubootimage shows is incomplete:

edb@lapedb:~/netbsd/src/$ obj/tooldir.Linux-2.6.39-2-686-pae-i686/bin/nbmkubootimage -h
usage: mkubootimage -A <arm|mips|mips64|powerpc> -C <none|gz|bz2> -O <openbsd|netbsd|freebsd|linux> -T <standalone|kernel|ramdisk|fs> -a <addr> [-e <ep>] [-m <magic>] -n <name> <srcfile> <dstfile>


>How-To-Repeat:
Run mkubootimage -h locally
>Fix:
The following trivial  patch solves this:

edb@lapedb:~/netbsd/src/usr.bin/mkubootimage$ cvs diff
Warning: Permanently added 'anoncvs.netbsd.org' (RSA) to the list of known hosts.
? obj
cvs diff: Diffing .
Index: mkubootimage.c
===================================================================
RCS file: /cvsroot/src/usr.bin/mkubootimage/mkubootimage.c,v
retrieving revision 1.11
diff -r1.11 mkubootimage.c
215c215
< 	fprintf(stderr, " -C <none|gz|bz2>");
---
> 	fprintf(stderr, " -C <none|gz|bz2|lzma|lzo>");

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sat, 06 Aug 2011 11:11:15 +0000
State-Changed-Why:
Committed, thanks.


From: "Thomas Klausner" <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45219 CVS commit: src/usr.bin/mkubootimage
Date: Sat, 6 Aug 2011 11:12:05 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Sat Aug  6 11:12:05 UTC 2011

 Modified Files:
 	src/usr.bin/mkubootimage: mkubootimage.c

 Log Message:
 Add lzma and lzo to usage. From Elie De Brauwer in PR 45219.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/usr.bin/mkubootimage/mkubootimage.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.