Add lzma and lzo to usage. From Elie De Brauwer in PR 45219.